After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 662256 - Folder appears twice in "Places"
Folder appears twice in "Places"
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Sidebar
3.3.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-10-19 23:48 UTC by Jean-Philippe Fleury
Modified: 2012-09-05 14:08 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Desktop displayed twice (8.29 KB, image/png)
2011-10-19 23:48 UTC, Jean-Philippe Fleury
  Details
Don't add duplicate xdg dirs to the places sidebar (4.11 KB, patch)
2012-09-05 01:47 UTC, William Jon McCann
committed Details | Review

Description Jean-Philippe Fleury 2011-10-19 23:48:32 UTC
Created attachment 199493 [details]
Desktop displayed twice

If "Desktop" and "Download" folders are set to the same path, Nautilus will display this folder twice in the "Computer" section on the sidebar.

To reproduce the bug:

1) Open "~/.config/user-dirs.dirs" and set the same path for "Desktop" and "Download":

XDG_DESKTOP_DIR="$HOME/Bureau"
XDG_DOWNLOAD_DIR="$HOME/Bureau"

2) Kill Nautilus and open it again.

3) Make sure the sidebar and "Places" are displayed on "Display > Sidebar".

Actual result: "Bureau" is displayed twice on the "Computer" section. See the attached screenshot.

Expected result: see only one link to "Bureau".

More information: if we comment the "Download" folder on "~/.config/user-dirs.dirs":

XDG_DESKTOP_DIR="$HOME/Bureau"
#XDG_DOWNLOAD_DIR="$HOME/Bureau"

then kill Nautilus and open it again, only one link to "Bureau" is displayed.

My config:

- Nautilus 3.2.0
- Ubuntu 11.10
- locale: fr_CA.UTF-8
Comment 1 Jean-Philippe Fleury 2011-10-19 23:49:13 UTC
Previously reported on https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/838290
Comment 2 Stefano Teso 2011-11-30 22:08:22 UTC
Confirming on 3.3.1.1 from git. Updating version and status accordingly.

If two or more XDG dirs alias the same directory (but I have to argue that this is quite a weird setup), update_places () doesn't keep track of the duplicates.
Comment 3 William Jon McCann 2012-09-05 01:47:40 UTC
Created attachment 223490 [details] [review]
Don't add duplicate xdg dirs to the places sidebar
Comment 4 Cosimo Cecchi 2012-09-05 13:09:10 UTC
Review of attachment 223490 [details] [review]:

Makes sense