Don't add duplicate xdg dirs to the places sidebar

https://bugzilla.gnome.org/show_bug.cgi?id=662256